wp_derive_request_builder/tests/fail/missing_namespace_attr.stderr
error: Missing #[Namespace("_path_")] attribute
 --> tests/fail/missing_namespace_attr.rs:3:1
  |
3 | enum UsersRequest {
  | ^^^^
